--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "next": "15.1.7",
     "pino-pretty": "^13.0.0",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "recharts": "^2.15.1"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
